Add simple validation on input fields.

--- a/client/template/usersList.html
+++ b/client/template/usersList.html
@@ -11,7 +11,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
+			<tr class="add-new-user">
 				<td><input type="text" name="first-name" class="form-control" /></td>
 				<td><input type="text" name="last-name" class="form-control" /></td>
 				<td><input type="text" name="phone-number" class="form-control" /></td>
