Remove client side validation. Add Server side validation.

--- a/client/template/userEdit.html
+++ b/client/template/userEdit.html
@@ -1,5 +1,5 @@
 <template name="userEdit">
-	<tr class="edit-user">
+	<tr class="edit-user {{_id}}">
 		<td><input type="text" value="{{firstName}}" name="edit-first-name" class="form-control" /></td>
 		<td><input type="text" value="{{lastName}}" name="edit-last-name" class="form-control" /></td>
 		<td><input type="text" value="{{phoneNumber}}" name="edit-phone-number" class="form-control" /></td>
