--- a/client/template/userEdit.html
+++ b/client/template/userEdit.html
@@ -1,12 +1,19 @@
 <template name="userEdit">
 	<tr class="edit-user {{_id}}">
+		<td>
+			<button class="btn btn-primary btn-sm" name="button-cancel" data-toggle="tooltip" data-placement="right" title="Cancel">
+				<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
+			</button>
+		</td>
 		<td><input type="text" value="{{firstName}}" name="edit-first-name" class="form-control" /></td>
 		<td><input type="text" value="{{lastName}}" name="edit-last-name" class="form-control" /></td>
 		<td><input type="text" value="{{phoneNumber}}" name="edit-phone-number" class="form-control" /></td>
 		<td><input type="text" value="{{email}}" name="edit-email" class="form-control" /></td>
 		<td><input type="text" value="{{address}}" name="edit-address" class="form-control" /></td>
-		<td><button class="btn btn-primary btn-sm" name="edit-sumbit">Save</button></td>
-		<td><button class="btn btn-primary btn-sm" name="edit-cancel">Cancel</button></td>
-		<td><button class="btn btn-primary btn-sm" name="edit-delete">Delete</button></td>
+		<td>
+			<button class="btn btn-primary btn-sm" name="button-update" data-toggle="tooltip" data-placement="right" title="Save">
+				<span class="glyphicon glyphicon-floppy-save" aria-hidden="true"></span>
+			</button>
+		</td>
 	</tr>
 </template>
